# skia_painter

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  deploy-pages.yml  deploy.yml  release.yml
bench/: benchmark.mjs
cmake/: echarts_regression.js.in  render_regression.js.in  text_rotate_regression.js.in
docs/: benchmarks.md
examples/: demo.js  echarts_axis_pointer.js  echarts_axis_pointer_multigrid.js  echarts_bar.js  echarts_boxplot.js  echarts_brush.js  echarts_calendar_effect_scatter.js  echarts_calendar_heatmap.js  echarts_calendar_scatter.js  echarts_candlestick.js  echarts_custom_series.js  echarts_dataset_multi_series.js  echarts_dataset_transform.js  echarts_datazoom_markarea.js  echarts_effect_scatter.js  echarts_funnel.js  echarts_gauge.js  echarts_geo_effect_scatter.js  echarts_geo_heatmap.js  echarts_geo_lines.js  echarts_graph.js  echarts_heatmap.js  echarts_image_scatter.js  echarts_legend_scroll.js  echarts_legend_selected.js  echarts_line.js  echarts_lines.js  echarts_map.js  echarts_map_piecewise.js  echarts_markpoint_markline.js  echarts_parallel.js  echarts_pattern_bar.js  echarts_pictorial_bar.js  echarts_pie.js  echarts_polar_bar.js  echarts_radar.js  echarts_rich_graphic.js  echarts_sankey.js  echarts_scatter.js  echarts_single_axis_scatter.js  (+14 more)
include/canvas_engine/canvas/: Canvas2DContext.h  CanvasSurface.h  ColorParser.h  ImageAsset.h
include/canvas_engine/runtime/: ScriptEngine.h
scripts/: bootstrap.sh  bootstrap_linux.sh  build.sh  build_pages.sh  dev_compare_server.js  inspect_echarts_canvas_api.js  run_demo.sh  verify_compare_coverage.py  verify_echarts_regression.py  verify_render_regression.py  verify_text_rotate_regression.py
src/: main.cc
src/canvas/: Canvas2DContext.cc  CanvasSurface.cc  ColorParser.cc  ImageAsset.cc
src/runtime/: ScriptEngine.cc
tests/: color_parser_test.cc  handle_gc.js  task_queue.js
web/compare/: app.js  cases.json  index.html  styles.css
